	  some older style configurations for you board, you will need to
	  convert those configurations to use the kconfig-frontends tools.
	  See http://www.nuttx.org/doku.php?id=wiki:howtos:convertconfig for
	  some guidelines (2014-3-6).
	* drivers/serial/Kconfig:  Correct an error introduced in this file
	  in very recent commits (2013-3-6).
	* configs/*sam*:  Refresh all SAM* configurations with the latest
	  Kconfig files (2014-3-6).
	* configs/stm32f4discovery:  Refresh all configurations (except
	  winbuild) with the latest Kconfig files (2014-3-6).
	* configs/viewtool-stm32f107:  Refresh all configurations with the
	  latest Kconfig files (2014-3-6).
	* configs/16z, mikroe-stm32f4, olimex-lpc1766stk, px4fmu-v2_upstream,
	  sim, and stm32f429i-disco: Refresh all configurations (2014-3-6).
	* Documentation/NuttShell.html:  Update per recommendations from Max
	  Kriegleder (2014-3-6).
	* configs/pic32-starterkit, pic32mx7mmb, stm3210e-eval, stm3220g-eval,
	  and stm3240g-eval:  Refresh all configurations with the latest
	  Kconfig files (2014-3-7).
	* configs/qemu-i486/src:  Files renamed to correspond with current
	  thinking about naming (2014-3-8).
	* arch/x86/src/qemu/qemu_keypad.c and qemu_vga.c:  New QEMU keyboard
	  and VGA drivers from Lizhuoyi (2014-3-8).
	* configs/olimex-lpc2378/src:  Files renamed to correspond with current
	  thinking about naming (2014-3-8).
	* arch/arm/src/lpc2378/lpc23xx_i2c.c and lpc23xx_spi.c:  I2C and SPI
	  drivers for the LPC23xx from Lizhuoyi (2014-3-8).
	* arch/arm/include/tiva and src/tiva:  The old lm/ directories were
	  renamed tiva/ to better support new products coming down the pipe
	  from TI (2014-3-8).
	* arch/arm/include/tiva, src/tiva, and configs/:  All files and all
	  all functions beginning with the name lm_ changed to tiva_
	  (2014-3-8).
	* configs/: Refresh all LM3/4/Tiva configurations (2014-3-9).
	* arch/arm/src/tiva/chip/tm4c_pinmap.h:  Add pin multiplex definitions
	  for the TM4C123 (2014-3-9).
